overflow fix

--- a/project/styles/project.css
+++ b/project/styles/project.css
@@ -74,7 +74,7 @@ header, footer {
 }
 
 #sort-links {
-grid-column: 1/3;
+grid-column: 1/5;
 margin: 2rem;
 }
 
@@ -85,7 +85,12 @@ main {
     background-color: var(--saffron);
     padding: 2rem;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.products {
+    overflow: auto;
+    grid-column: 2/5;
 }
 
 main, footer {
